--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -105,17 +105,17 @@ jobs:
             rm -rf $OPENWRT_PATH/files
             cp -r "$GITHUB_WORKSPACE/files-emmc" "$OPENWRT_PATH/files"
           fi
-          # Add packages required for auto partitioning and ext4 overlay
-          cat >> $OPENWRT_PATH/.config <<'EOF'
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_gdisk=y
-CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_kmod-fs-f2fs=y
-CONFIG_PACKAGE_f2fs-tools=y
-EOF
+          # Add packages required for auto partitioning and overlay (avoid heredoc for YAML safety)
+          {
+            echo 'CONFIG_PACKAGE_block-mount=y'
+            echo 'CONFIG_PACKAGE_parted=y'
+            echo 'CONFIG_PACKAGE_gdisk=y'
+            echo 'CONFIG_PACKAGE_lsblk=y'
+            echo 'CONFIG_PACKAGE_e2fsprogs=y'
+            echo 'CONFIG_PACKAGE_kmod-fs-ext4=y'
+            echo 'CONFIG_PACKAGE_kmod-fs-f2fs=y'
+            echo 'CONFIG_PACKAGE_f2fs-tools=y'
+          } >> $OPENWRT_PATH/.config
         fi
 
     - name: SSH connection to Actions
