--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -26,6 +26,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        variant: [nand, emmc]
 
     steps:
     - name: Check Server Performance
@@ -90,10 +93,20 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
         chmod +x $DIY_P2_SH
         cd $OPENWRT_PATH
         $GITHUB_WORKSPACE/$DIY_P2_SH
+        # Select matrix config
+        if [ "${{ matrix.variant }}" = "nand" ]; then
+          SRC="$GITHUB_WORKSPACE/.config-nand"
+        else
+          SRC="$GITHUB_WORKSPACE/.config-emmc"
+        fi
+        if [ -f "$SRC" ]; then
+          cp -f "$SRC" .config
+        elif [ -f "$GITHUB_WORKSPACE/.config" ]; then
+          cp -f "$GITHUB_WORKSPACE/.config" .config
+        fi
 
     - name: Download package
       id: package
@@ -109,7 +122,22 @@ jobs:
       run: |
         cd $OPENWRT_PATH
         echo -e "$(nproc) thread compile"
+        make defconfig
         make -j$(nproc) || make -j1 || make -j1 V=s
+
+        # Rename sysupgrade filename by variant
+        FW_DIR=$(ls -d bin/targets/*/*)
+        cd "$FW_DIR"
+        SYS=$(ls *cmcc_rax3000m-squashfs-sysupgrade.itb 2>/dev/null | head -n1)
+        if [ -n "$SYS" ]; then
+          if [ "${{ matrix.variant }}" = "nand" ]; then
+            mv -f "$SYS" "immortalwrt-mediatek-filogic-cmcc_rax3000m-nand-squashfs-sysupgrade.itb"
+          else
+            mv -f "$SYS" "immortalwrt-mediatek-filogic-cmcc_rax3000m-emmc-squashfs-sysupgrade.itb"
+          fi
+        fi
+        cd "$OPENWRT_PATH"
+
         echo "status=success" >> $GITHUB_ENV
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
@@ -123,7 +151,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}-${{ matrix.variant }}
         path: ${{ env.OPENWRT_PATH }}/bin
 
     - name: Organize files
@@ -135,12 +163,56 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_ENV
 
+
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: firmware-${{ matrix.variant }}
         path: ${{ env.FIRMWARE }}
+
+  publish:
+    runs-on: ubuntu-22.04
+    needs: build
+    if: always() && (needs.build.result == 'success' || contains(needs.build.outputs.*, 'success'))
+
+    steps:
+    - name: Download eMMC firmware
+      uses: actions/download-artifact@v3
+      with:
+        name: firmware-emmc
+        path: firmware_emmc
+      continue-on-error: true
+
+    - name: Download NAND firmware
+      uses: actions/download-artifact@v3
+      with:
+        name: firmware-nand
+        path: firmware_nand
+      continue-on-error: true
+
+    - name: Merge and prune
+      run: |
+        # Handle NAND firmware if exists
+        if [ -d firmware_nand ]; then
+          cd firmware_nand
+          find . -type f ! -name "*-nand-squashfs-sysupgrade.itb" -delete
+          find . -type d -empty -delete
+          cd ..
+          if ls firmware_nand/*.itb 1> /dev/null 2>&1; then
+            cp -f firmware_nand/*.itb firmware_emmc/
+          fi
+        fi
+        
+        # Set firmware directory (prefer emmc, fallback to nand if emmc missing)
+        if [ -d firmware_emmc ]; then
+          echo "FIRMWARE_DIR=$PWD/firmware_emmc" >> $GITHUB_ENV
+        elif [ -d firmware_nand ]; then
+          echo "FIRMWARE_DIR=$PWD/firmware_nand" >> $GITHUB_ENV
+        else
+          echo "ERROR: No firmware directory found"
+          exit 1
+        fi
 
     - name: Generate release tag
       id: tag
@@ -148,8 +220,6 @@ jobs:
       run: |
         echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_OUTPUT
         touch release.txt
-        [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
-        [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
@@ -160,7 +230,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
+        files: ${{ env.FIRMWARE_DIR }}/*
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
